# jucipp

./: CMakeLists.txt
docs/: install.md
src/: CMakeLists.txt  config.cc  config.h  menu.cc  window.cc
tests/: CMakeLists.txt
